[Bug #20926] Fix a crashes with `shareable_constant_value: experimental_everything` using parse.y's parser

https://bugs.ruby-lang.org/issues/20926